# WMS-Project

./: .env  .env.docker  .env.example  .env.test  .gitignore  CI_CD_SETUP.md  Dockerfile  ENHANCED_CHAINS_IMPROVEMENTS.md  ERROR_HANDLING_FIX.md  FRONTEND_QUICK_REFERENCE.md  FRONTEND_UPDATES.md  PRODUCTION_TEST_REPORT.md  PROJECT_DOCUMENTATION.md  PROJECT_TREE.md  README.md  SQL_HARDENING_GUIDE.md  TEST_COMMANDS.md  VALIDATION_IMPROVEMENTS.md  check_db.py  debug_conftest.py  debug_tables.py  docker-compose.secure.yml  docker-compose.yml  fix_seed_data.sh  pyproject.toml  pytest.ini  pytest_sqlite.ini  requirements.txt  run_enhanced_chains_tests.py  run_sql_exec_tests.py  run_tests.py  run_tests.sh  run_validation_tests.py  show_login_credentials.py  start.sh  test_ai_questions.py  test_api.py  test_functional_simple.py  test_imports_simple.py  test_models_debug.py  (+2 more)
.github/workflows/: ci.yml  python-ci.yml
PMKT/api/: dependencies.py  models.py
PMKT/domain/: __init__.py  document_domain.py  inventory_domain.py  product_domain.py  warehouse_domain.py
PMKT/module/: custom_exceptions.py  error_constants.py
PMKT/repo/: inventory_repo.py  product_repo.py  warehouse_repo.py
PMKT/report/: document_report.py  inventory_report.py  product_report.py  warehouse_report.py
PMKT/services/: warehouse_service.py
PMKT/utils/: __init__.py
WMS/: .env.docker  .gitignore  ARCHITECTURE_DIAGRAMS.md  Dockerfile  PERFORMANCE_ANALYSIS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  RAPID_SWITCHING_FIX.md  README.md  S_PLUS_UPGRADE_REPORT.md  docker-compose.yml  ecure_password_2026 psql -h localhost -U wms_user -d warehouse_db -c SELECT indexname FROM pg_indexes WHERE schemaname = 'public' ORDER BY indexname;  errors.txt  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  warehouse.db
WMS/app/: main.py
WMS/app/api/: __init__.py  auth_deps.py  dependencies.py  middleware.py  warehouse_operations.py
WMS/app/api/routers/: auth.py  documents.py  inventory.py  products.py  reports.py  users.py  warehouses.py
WMS/app/api/schemas/: auth.py  product.py
WMS/app/application/: command_handlers.py  commands.py  dto.py  queries.py  query_handlers.py
WMS/app/core/: container.py  database.py  logging.py  settings.py
WMS/app/domain/: value_objects.py
WMS/app/exceptions/: business_exceptions.py
WMS/app/infrastructure/: di_container.py
WMS/app/models/: __init__.py  document_domain.py  inventory_domain.py  warehouse_domain.py
WMS/app/repositories/interfaces/: interfaces.py
WMS/app/repositories/sql/: document_repo.py  inventory_repo.py  models.py  product_repo.py  user_repo.py  warehouse_repo.py
WMS/app/services/: customer_service.py  document_report.py  document_service.py  inventory_report.py  inventory_service.py  product_report.py  product_service.py  report_service.py  user_service.py  warehouse_operations_service.py  warehouse_report.py  warehouse_service.py
WMS/app/utils/: __init__.py
WMS/app/utils/domain/: __init__.py
WMS/app/utils/infrastructure/: id_generator.py
WMS/diagrams/: 01-system-architecture.mmd  02-document-transaction-flow.mmd  03-database-schema.mmd  04-clean-architecture.mmd  05-request-lifecycle.mmd  06-file-structure.mmd  07-import-document-flow.mmd  08-index-performance.mmd  09-security-architecture.mmd  README.md  export-all.ps1
WMS/diagrams/interactive/: 01-business-flow.html  02-api-flow.html  03-database-flow.html  04-core-layer.html  05-repository-layer.html  06-service-layer.html  index.html
WMS/scripts/: create_admin.py  run_api.ps1  run_tests.py  tree.py
WMS/tests/: conftest.py  debug_concurrent.py  quick_test.py  test_db_isolation.py  test_session_and_sales.py
WMS/tests/functional/: test_warehouse_workflows.py
WMS/tests/integration/: test_integration.py
WMS/tests/integration/api/: test_products_api.py  test_warehouses_api.py
WMS/tests/sql/: conftest.py  test_sql_document_repo.py  test_sql_inventory_repo.py  test_sql_product_repo.py  test_sql_warehouse_repo.py  test_warehouse_transfer_integration.py
WMS/tests/unit/domain/: test_document.py  test_inventory_item.py  test_product.py  test_warehouse.py
WMS/tests/unit/repo/: test_document_repo.py  test_inventory_repo.py  test_product_repo.py  test_product_repo_new.py  test_warehouse_repo.py
WMS/tests/unit/services/: test_inventory_service.py  test_product_service.py  test_warehouse_service.py
ai_engine/: indexer.py  run_indexer.py
alembic/: env.py
alembic/versions/: 42f8cbff95a1_add_audit_logs_columns.py
cloudflare/: README.md  config.yml.example
dashboard/: index.html  package-lock.json  script.js  styles.css
docker/: nginx.conf  prometheus.yml
scripts/: add_customer_id.py  cleanup_logs.py  create_admin.py  create_vector_from_db.py  fix_seed_data.sh  load_seed_data.py  run_sql_exec_tests.py  seed.py  seed_rag.py  setup_complete_wms.sh  setup_secure_users.sql
src/: CLEAN_ARCHITECTURE.md  DATABASE_SETUP.md  Dockerfile.secure  README.md
src-old/: main.py
src-old/app/: main.py
src-old/scripts/: check_warehouses.py
src/ai_engine/: brain.py  brain2.py  indexer1.py  master_brain.py
src/app/: main.py  output.pstats
src/scripts/: run_tests.py  test_db.py
src/tests/: comprehensive_test.py  conftest.py  test_db_isolation.py  test_rapid_simple.py
tests/: README.md  SOLID_TESTS_README.md  conftest.py  conftest_api.py  conftest_sqlite.py  run_all_tests.py  test_advanced_validation.py  test_enhanced_chains.py  test_rapid_switching.py  test_secure_query.py  test_smoke.py  test_solid_runner.py  test_sql_exec.py  test_sql_parser.py
tests/api/: test_ai_edge_cases.py  test_ai_error_handling.py  test_ai_modes.py  test_ai_performance.py  test_ai_security_edge_cases.py  test_pre_merge.py
tests/e2e/: test_user_journeys.py.disabled  total_project_test.py
tests/functional/: test_warehouse_operations.py  test_warehouse_workflows.py
tests/integration/: test_basic_integration.py  test_document_workflows.py  test_feature_completion.py  test_inventory_integration.py  test_product_workflows.py  (+3 more)
weekend/: .coverage  README.md  requirements.txt
(+404 files in other folders)
